--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -57,11 +57,9 @@
 			</br>			
 			<table id="link-group" class="table table-bordered text-center" style="" >
 				<tr>
-				<% if current_user && current_user.book_trade_infos.count>0 %>
 					<td>
 						<%=link_to "我的商品","/books/?mine=true",class:"btn btn-success",style:"font-size:16px;" %>
 					</td>
-				<% end %>
 					<td >
 						<%=link_to "新增商品",new_book_path,class:"btn btn-info",style:"font-size:16px;" %>			
 					</td>
@@ -73,26 +71,31 @@
 				<table id="college-table" class="table table-bordered bg-white">
 					<tr class="list-grou text-center">		
 						<td class="col-md-2 clickable-hover" id="departments_id_eq_8"><%=link_to "通識","?q[departments_id_eq]=8",class:"list-group-ite"%></td>
-						<td class="col-md-2 clickable-hover" id="colleges_id_eq_3"><%=link_to "資訊學院","?q[colleges_id_eq]=3",class:"list-group-ite"%></td>
-					</tr>
-					<tr class="list-grou text-center">
-						<td class="col-md-2 clickable-hover" id="colleges_id_eq_5"><%=link_to "電機學院","?q[colleges_id_eq]=5",class:"list-group-ite"%></td>
-						<td class="col-md-2 clickable-hover" id="colleges_id_eq_4"><%=link_to "工學院","?q[colleges_id_eq]=4",class:"list-group-ite"%></td>
-					</tr>
-					<tr class="list-grou text-center">
-						<td class="col-md-2 clickable-hover" id="colleges_id_eq_9"><%=link_to "理學院","?q[colleges_id_eq]=9",class:"list-group-ite"%></td>
-						<td class="col-md-2 clickable-hover" id="colleges_id_eq_8"><%=link_to "光電學院","?q[colleges_id_eq]=8",class:"list-group-ite"%></td>
-					</tr>
-					<tr class="list-grou text-center">
-						<td class="col-md-2 clickable-hover" id="colleges_id_eq_2"><%=link_to "生科學院","?q[colleges_id_eq]=2",class:"list-group-ite"%></td>
-						<td class="col-md-2 clickable-hover" id="colleges_id_eq_7"><%=link_to "管理學院","?q[colleges_id_eq]=7",class:"list-group-ite"%></td>
-					</tr>
-					<tr class="list-grou text-center">
-						<td class="col-md-2 clickable-hover" id="colleges_id_eq_1"><%=link_to "人社學院","?q[colleges_id_eq]=1",class:"list-group-ite"%></td>
-						<td class="col-md-2 clickable-hover" id="colleges_id_eq_6"><%=link_to "客家文化學院","?q[colleges_id_eq]=6",class:"list-group-ite"%></td>
-					</tr>
-					<tr class="list-grou text-center">
 						<td class="col-md-2 clickable-hover" id="departments_id_eq_9"><%=link_to "外文","?q[departments_id_eq]=9",class:"list-group-ite"%></td>
+						
+					</tr>
+					<tr class="list-grou text-center">
+						<td class="col-md-2 clickable-hover" id="colleges_id_eq_3"><%=link_to "資訊學院","?q[colleges_id_eq]=3",class:"list-group-ite"%></td>
+						<td class="col-md-2 clickable-hover" id="colleges_id_eq_5"><%=link_to "電機學院","?q[colleges_id_eq]=5",class:"list-group-ite"%></td>
+
+					</tr>
+					<tr class="list-grou text-center">
+						<td class="col-md-2 clickable-hover" id="colleges_id_eq_4"><%=link_to "工學院","?q[colleges_id_eq]=4",class:"list-group-ite"%></td>						
+						<td class="col-md-2 clickable-hover" id="colleges_id_eq_9"><%=link_to "理學院","?q[colleges_id_eq]=9",class:"list-group-ite"%></td>
+
+					</tr>
+					<tr class="list-grou text-center">
+						<td class="col-md-2 clickable-hover" id="colleges_id_eq_8"><%=link_to "光電學院","?q[colleges_id_eq]=8",class:"list-group-ite"%></td>					
+						<td class="col-md-2 clickable-hover" id="colleges_id_eq_2"><%=link_to "生科學院","?q[colleges_id_eq]=2",class:"list-group-ite"%></td>
+
+					</tr>
+					<tr class="list-grou text-center">
+						<td class="col-md-2 clickable-hover" id="colleges_id_eq_7"><%=link_to "管理學院","?q[colleges_id_eq]=7",class:"list-group-ite"%></td>					
+						<td class="col-md-2 clickable-hover" id="colleges_id_eq_1"><%=link_to "人社學院","?q[colleges_id_eq]=1",class:"list-group-ite"%></td>
+
+					</tr>
+					<tr class="list-grou text-center">
+						<td class="col-md-2 clickable-hover" id="colleges_id_eq_6"><%=link_to "客家文化學院","?q[colleges_id_eq]=6",class:"list-group-ite"%></td>						
 						<td class="col-md-2 clickable-hover" id="book_trade_info_sh_null_1"><%=link_to "無分類","?q[book_trade_info_sh_null]=1",class:"list-group-ite"%></td>					
 					</tr>
 				</table>
@@ -102,17 +105,15 @@
 			<div class="row">
 				<ul class="list-group">
 					<% @recent.each do |stat| %>
-						<li class="list-group-item">
-							<strong>
-								<%=elapse_time(stat.updated_at)%>
-							</strong>
+						<li class="list-group-item">							
+							<%=elapse_time(stat.updated_at)%>						
 							<%=stat.book.title%>  售出
 						</li>
 					<% end %>
 				</ul>
 			</div>
 		</div>
-		<div class="col-md-8 well">
+		<div class="col-md-8 ">
 			<div class="row">
 				<% if @sale_books.count==0 %> 
 					<div class="text-center">尚無二手書</div>
