--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,6 +6,11 @@
 	<a href="https://github.com/t6847kimo/nctuplus/" style="text-decoration:none;color:white" target="blank">
 		<i class="fa fa-2x fa-github-square text-light" style="line-height:50px;margin-left:8px;outline:none;"></i>
 	</a>
+	<!--
+	<a href="https://www.facebook.com/messages/nctuplus" style="text-decoration:none;color:white;font-size:12px;" target="blank">
+		<i class="fa fa-2x fa-send text-light" style="line-height:45px;margin-left:8px;outline:none;"></i>
+	</a>
+	-->
 	<!--<i class="fa fa-2x fa-envelope wow bounceIn text-light" style="line-height:50px;margin-left:10px;"></i>
 	-->
 </div>
