add news on index

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -21,26 +21,30 @@
 				<h1>NCTU+</h1>
 				<h3 style="position:relative;padding-top:-20px">交大智慧校園系統</h3>
 				<h4 class="parallelogram2">Brilliant College Life</h4>		
-				<div class="tabs-block hidden">
+				<div class="tabs-block hidde">
 					<div class="hr-left"></div>
 					<ul class="tabs">
 						<li>
 							<input type="radio" name="tabs" id="tab1" checked />
 							<label for="tab1"><h5>News</h5></label>
 							<div id="tab-content1" class="tab-content">
-								建議以Chrome 或 Firefox瀏覽<br>
-								∎　6/8 二手書系統上線
-								<br>∎　6/10 模擬排課系統上線
-								<br>∎　6/12 新增課表分享功能，分享學習歷程給大家
+								<!--建議以Chrome 或 Firefox瀏覽<br>
+								∎　6/8 二手書系統上線-->
+								<br>
+								∎ 01/03 第一階段初選：<strong>2016/01/05~2016/01/07</strong><br>
+								∎ 01/03 第二階段初選：<strong>2016/01/12~2016/01/14</strong><br>
+								
 							</div>
 						</li>
 						<li>
 							<input type="radio" name="tabs" id="tab2" />
 							<label for="tab2"><h5>Updates</h5></label>
 							<div id="tab-content1" class="tab-content">
-								∎　電子系課程心得更新
-								<br>∎　人社系課程心得更新
-								<br>∎　通識課程心得更新
+								∎ 01/03　新增「最新消息佈告欄」<br>
+								∎ 01/03　新增「問題回報」功能<br>
+								∎ 12/31　修正學分計算錯誤<br>
+								∎ 12/25　課程資料更新至104下<br>
+								∎ 12/08　新增「考古題&二手書」分類搜尋<br>
 							</div>
 						</li>
 					</ul>
