--- a/app/views/user/course_stat/_xtmpl_common_check.html.erb
+++ b/app/views/user/course_stat/_xtmpl_common_check.html.erb
@@ -1,6 +1,8 @@
 <script type="text/x-tmpl" id="common_check">
 {% var result=commonCheck(o); %}
-
+<h4>
+※外語學分目前不會計算第二外語以及進修英文(因為無法得知是否通過中高級初試)，目前需請同學自行計算!
+</h4>
 <table class="table table-bordered "style="border:0px">
 	<tr class="">
 		<td rowspan="2" class="col-md-2" style="vertical-align:middle"><h4 class="text-center">服務學習</h4></td>
