update for news 20160108

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -31,8 +31,8 @@
 								<!--建議以Chrome 或 Firefox瀏覽<br>
 								∎　6/8 二手書系統上線-->
 								<br>
-								∎ 01/03 第一階段初選：<strong>2016/01/05~2016/01/07</strong><br>
 								∎ 01/03 第二階段初選：<strong>2016/01/12~2016/01/14</strong><br>
+								∎ 01/08 開學後加退選：<strong>2016/02/16~2016/02/26</strong><br>
 								
 							</div>
 						</li>
